--- a/Remindr/bin/AndroidManifest.xml
+++ b/Remindr/bin/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="18" />
 
     <application
@@ -16,6 +16,15 @@
         <activity
             android:name="com.thejustinyang.remindr.MainActivity"
             android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.thejustinyang.remindr.RemindrActivity"
+            android:label="@string/title_activity_remindr" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
